# rafts

./: Makefile  Makefile.in  README.md  basic.fs  c.csh  c.fs  c1.fs  c2.fs  c3.fs  c4.fs  c5.fs  c6.fs  c7.fs  cat.sh  cc.fs  compiler.fs  compiler1.fs  configure  configure.in  control.fs  dataflow.fs  debug.fs  dotgen.sh  fi.sh  func.fs  gforth-debug.sh  gforth.sh  grep.sh  inst-scheduling.fs  inst-selection.fs  node.fs  options.fs  options1.fs  pre.fs  primitives-ext.fs  primitives.fs  primitives_ext.fs  register.fs  regs.fs  self.csh  (+3 more)
alpha/: asm.fs  disasm.fs  grammar.burg  header.fs
bench/: Makefile  bubble-sort.pfe  bubble-sort.tst  fib.fs  matrix-mult.c  matrix-mult.pfe  matrix-mult.tst  xbench  xcalc  xcrun  xgrun  xrun  xtest
burg/: Makefile  Makefile.in  b.h  be.c  bfef  bfef.awk  burg.c  burs.c  closure.c  configure  configure.in  delta.c  fe.c  fe.h  gram.y  item.c  lex.c  list.c  main.c  map.c  nonterminal.c  operator.c  pattern.c  plank.c  queue.c  rule.c  string.c  symtab.c  table.c  trim.c  zalloc.c
examp/: coretest.fs  k.fs  kkk.fs  sieve.fs  tester.fs  ucon.fs  udep.fs  udoes.fs  uopt.fs  va.fs  vaa.fs  vc.fs  vcc.fs  vd.fs  ve.fs  vee.fs  veee.fs  vf.fs  vff.fs  vincl.fs  vnew.fs  vx.fs  vxx.fs  wbsp0.fs  wbsp1.fs  wbsp2.fs  x.fs  xcompiler  xcontrol  xgrep  xgrun  xnorun.fs  xrun  xrun.fs  xruncompiler  xtest  z+loop.fs  zagain.fs  zcase.fs  zfunc.fs  (+6 more)
examples/: dmp0.fs  dmp1.fs  dmp2.fs  dmp3.fs  dmp4.fs  dmp5.fs  pperf.fs  s.fs  ss.fs  sss.fs  ssss.fs  t.fs  tt.fs  x.fs  x1.fs  x2.fs  x3.fs  x4.fs  x5.fs  x6.fs  x7.fs
i386/: asm.fs  disasm.fs  grammar.burg  header.fs
i486/: header.fs
mips/: asm.fs  assembling.fs  disasm.fs  grammar.burg  grammar.fs  header.fs  r3000.asm.fs  r3000.asm.opc.fs  r3000.disasm.fs  r3000.disasm.opc.fs
stdlib/: 2array.fs  array.fs  btree.fs  dlist.fs  marray.fs  matrix.fs  queue.fs  slist.fs  stack.fs  stdlib.fs  string.fs
test/: coretest.fs  gramtest.fs
