dnl Process this file with autoconf to produce a configure script.

# configure.in
#
# Copyright (C) 1995-96 Martin Anton Ertl, Christian Pirker
#
# This file is part of RAFTS.
#
#	RAFTS is free software; you can redistribute it and/or
#	modify it under the terms of the GNU General Public License
#	as published by the Free Software Foundation; either version 2
#	of the License, or (at your option) any later version.
#
#	This program is distributed in the hope that it will be useful,
#	but WITHOUT ANY WARRANTY; without even the implied warranty of
#	MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
#	GNU General Public License for more details.
#
#	You should have received a copy of the GNU General Public License
#	along with this program; if not, write to the Free Software
#	Foundation, Inc., 675 Mass Ave, Cambridge, MA 02139, USA.

AC_INIT(ansidecl.h)

AC_ARG_WITH(debug,
[  --with-debug            specifies option -g to compile with debug info (default)
  --without-debug         omits the -g switch and creates smaller images on
                          machines where "strip" has problems with gcc style
                          debugging informations.],
if test "$withval" = "yes"; then DEBUGFLAG=-g; fi)

CFLAGS=$CFLAGS

AC_SUBST(CC)
AC_SUBST(GCCLDFLAGS)
AC_SUBST(DEBUGFLAG)

#terminology is a bit unusual here: The host is the system on which
#gforth will run; the system on which configure will run is the `build'
AC_CANONICAL_HOST
case "$host_cpu" in
	hppa*)
		mach=hppa
		;;
	sparc*)
		mach=sparc
		;;
	i386|i486|i586)
		mach=i386
		;;
	mips*)
		mach=mips
		;;
	alpha*)
		mach=alpha
		;;
	*)
		echo "Using a generic machine description."
		mach=generic
esac
AC_SUBST(host)
AC_SUBST(mach)

dnl Checks for programs.
AC_PROG_CC
AC_PROG_INSTALL
AC_PROG_LN_S

dnl Checks for libraries.

dnl Checks for header files.
AC_HEADER_STDC
AC_CHECK_HEADERS(ansidecl.h getopt.h)

dnl Checks for typedefs, structures, and compiler characteristics.

dnl Checks for library functions.
AC_FUNC_VPRINTF
AC_CHECK_FUNC(getopt,getopt="",getopt="getopt.o getopt1.o")
AC_SUBST(getopt)

AC_OUTPUT(Makefile)

